--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <ul>
-      <li><img src="랜덤사진/IMG_3864.jpg"></li>
+      <!-- <li><img src="랜덤사진/IMG_3864.jpg"></li>
       <li><img src="랜덤사진/img_3865.jpg"></li>
-      <li></li>
+      <li></li> -->
     </ul>
   </body>
 </html>
